# FuDU

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
configs/: default.yaml
docs/: data_format.md  fuzzy_parameters.md  integration.md  open_source_plan_zh.md
examples/: detections.jsonl  initial_features.csv  stream_features.csv  synthetic_stream.py
src/fudu/: __init__.py  cli.py  fuzzy.py  io.py  prototypes.py  stream.py  torch_modules.py  uncertainty.py
tests/: test_cli_smoke.py  test_fuzzy.py  test_uncertainty.py
