[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fudu-al"
version = "0.1.0"
description = "FuDU: Fuzzy Dual-dimensional Uncertainty for streaming active learning in industrial defect detection."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "FuDU authors"}
]
keywords = [
  "active learning",
  "industrial defect detection",
  "uncertainty",
  "fuzzy inference",
  "object detection"
]
dependencies = [
  "numpy>=1.23"
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = []

[project.scripts]
fudu = "fudu.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
